--- a/css/style.css
+++ b/css/style.css
@@ -95,19 +95,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
   }
 }
 
-h5, .h5, h6, .h6 {
-  margin-top: 4.8rem;
-  margin-bottom: 1.2rem;
-}
-
-@media screen and (max-width:600px) {
-  h5, .h5, h6, .h6 {
-    margin-top: 4rem;
-    margin-bottom: 0.8rem;
-  }
-
-}
-
 h1, .h1 {
   font-size: 3.6rem;
   line-height: 1.222;
@@ -135,18 +122,6 @@ h3, .h3 {
 h4, .h4 {
   font-size: 2.1rem;
   line-height: 1.286;
-}
-
-h5, .h5 {
-  font-size: 1.8rem;
-  line-height: 1.333;
-}
-
-h6, .h6 {
-  font-size: 1.6rem;
-  line-height: 1.5;
-  text-transform: uppercase;
-  letter-spacing: .16rem;
 }
 
 p img {
@@ -214,7 +189,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #cf1767;
+  background: #9009B2;
   position: absolute;
   left: -16px;
   top: 11px;
@@ -223,7 +198,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #cf1767;
+  color: #9009B2;
 }
 
 dd {
@@ -268,7 +243,7 @@ dd {
   border-top: 6px solid rgba(255, 255, 255, 0.1);
   border-right: 6px solid rgba(255, 255, 255, 0.1);
   border-bottom: 6px solid rgba(255, 255, 255, 0.1);
-  border-left: 6px solid #A20EAF;
+  border-left: 6px solid #9009B2;
   -webkit-animation: load 1.1s infinite linear;
   animation: load 1.1s infinite linear;
   display: block;
@@ -709,7 +684,7 @@ dd {
   right: 0;
   height: 1px;
   width: 72px;
-  background-color: #cf1767;
+  background-color: #9009B2;
 }
 
 /* ------------------------------------------------------------------- 
