--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,31 @@
 /* =================================================================== 
- *
- *  Bruna Silva Portfolio
- *  00-00-2023
- *  ------------------------------------------------------------------
- *
- *  TOC:
- *  base style overrides
- *  preloader
- *  # header 
- *  header logo
- *  main navigation
- *  menu trigger
- *  # intro 
+*
+*  Bruna Silva Portfolio
+*  00-00-2023
+*  ------------------------------------------------------------------
+*
+*  # root - colors
+*  # base
+*  # typography
+*  # lists
+*  # preloader
+*  # header
+*  # home
+*  # about
+* =================================================================== */
 
- *
- * =================================================================== */
 
+:root {
+  --white: #fff;
+  --black: #000;
+  --main-color: #7912B2;
+  --primary-text-color: #777;
+  --secondary-text-color: #DCDCDC;
+}
 
 
 /* ===================================================================
- * # base style overrides
+ * # base
  *
  * ------------------------------------------------------------------- */
 html {
@@ -33,39 +39,17 @@ html {
 
 }
 
-
-
 body {
   background: #050505;
-  font-family: "Lora", serif;
+  font-family: "montserrat-light", sans-serif;
   font-size: 1.7rem;
   font-style: normal;
   font-weight: normal;
   line-height: 1.882;
-  color: #000000;
+  color: var(--black);
   margin: 0;
   padding: 0;
 }
-
-/* ------------------------------------------------------------------- 
- * ## links
- * ------------------------------------------------------------------- */
-a {
-  color: #cf1767;
-  transition: all 0.3s ease-in-out;
-}
-
-a:hover,
-a:focus,
-a:active {
-  color: #000000;
-}
-
-a:hover,
-a:active {
-  outline: 0;
-}
-
 
 
 /* ===================================================================
@@ -73,10 +57,10 @@ a:active {
  * 
  * ------------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Frank Ruhl Libre", serif;
-  font-weight: 500;
+  font-family: "montserrat-extrabold", sans-serif;
+  font-weight: 600;
   font-style: normal;
-  color: #000000;
+  color: var(--black);
   font-variant-ligatures: common-ligatures;
   text-rendering: optimizeLegibility;
 }
@@ -126,12 +110,12 @@ p img {
 }
 
 p.lead {
-  font-family: "Lora", serif;
+  font-family: "montserrat-light", sans-serif;
   font-weight: 300;
   font-size: 2.4rem;
   line-height: 1.833;
   margin-bottom: 3.6rem;
-  color: #000000;
+  color: var(--black);
 }
 
 @media screen and (max-width:1200px) {
@@ -143,7 +127,7 @@ p.lead {
 
 
 /* ------------------------------------------------------------------- 
- * ## Lists
+ * # Lists
  * ------------------------------------------------------------------- */
 ol {
   list-style: decimal;
@@ -186,7 +170,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #9009B2;
+  background: var(--main-color);
   position: absolute;
   left: -16px;
   top: 11px;
@@ -195,7 +179,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #9009B2;
+  color: var(--main-color);
 }
 
 dd {
@@ -204,19 +188,44 @@ dd {
 
 
 /* =================================================================== 
- * # preloader
- *
- * ------------------------------------------------------------------- */
+* # preloader
+*
+* ------------------------------------------------------------------- */
 #preloader {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: #050505;
+  background: var(--black);
   z-index: 500;
-  height: 100vh;
   width: 100%;
+  height: 100vh;
+}
+
+#loader {
+  width: 60px;
+  height: 60px;
+  left: 50%;
+  top: 50%;
+  padding: 0;
+  position: absolute;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+#loader::before {
+  content: '';
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border-top: 6px solid rgba(255, 255, 255, 0.1);
+  border-right: 6px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 6px solid rgba(255, 255, 255, 0.1);
+  border-left: 6px solid var(--main-color);
+  -webkit-animation: load 1.1s infinite linear;
+  animation: load 1.1s infinite linear;
+  display: block;
 }
 
 .no-js #preloader,
@@ -224,134 +233,100 @@ dd {
   display: none;
 }
 
-#loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  padding: 0;
-  margin-left: -30px;
-  margin-top: -30px;
-}
-
-#loader:before {
-  content: "";
-  border-top: 6px solid rgba(255, 255, 255, 0.1);
-  border-right: 6px solid rgba(255, 255, 255, 0.1);
-  border-bottom: 6px solid rgba(255, 255, 255, 0.1);
-  border-left: 6px solid #9009B2;
-  -webkit-animation: load 1.1s infinite linear;
-  animation: load 1.1s infinite linear;
-  display: block;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
+@keyframes load {
+  0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg)
+  }
 }
 
 @-webkit-keyframes load {
   0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
   }
-
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg)
   }
-
-}
-
-@keyframes load {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-
 }
 
 
 /* ===================================================================
- * # header 
- *
- * ------------------------------------------------------------------- */
-.s-header {
-  position: absolute;
-  top: 2rem;
-  left: 0;
+* # header 
+*
+* ------------------------------------------------------------------- */
+.header {
   width: 100%;
   height: 78px;
   text-align: center;
+  top: 2rem;
+  left: 0;
+  position: absolute;
   z-index: 100;
 }
 
-.s-header.sticky {
-  background-color: #050505;
+.header .sticky {
+  background-color: var(--black);
   position: fixed;
   top: 0;
   left: 0;
 }
 
-/* -------------------------------------------------------------------
- * ## header logo
- * ------------------------------------------------------------------- */
 .header-logo {
+  top: 50%;
+  left: 40px;
+  position: absolute;
   display: inline-block;
   padding: 0;
   -webkit-transform: translate3d(0, -50%, 0);
   transform: translate3d(0, -50%, 0);
-  position: absolute;
-  top: 50%;
-  left: 40px;
 }
 
 .header-logo a {
-  font-family: "Roboto", sans-serif;
+  font-family: 'montserrat-bold', sans-serif;
   font-size: 30px;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .3rem;
-  color: #fff;
+  color: var(--white);
   margin: 0 0 0 4px;
   z-index: 2;
   position: static;
 }
 
-/* -------------------------------------------------------------------
- * ## main navigation
- * ------------------------------------------------------------------- */
 .header-nav-wrap {
   display: inline-block;
 }
 
 .header-nav-wrap ul {
-  display: inline-block;
-  list-style: none;
   margin-left: 0;
   margin-top: 18px;
+  display: inline-block;
+  list-style: none;
 }
 
 .header-nav-wrap li {
-  display: inline-block;
   padding-left: 0;
+  display: inline-block;
 }
 
 .header-nav-wrap li a {
-  display: block;
   line-height: calc(78px - (18px * 2));
+  display: block;
 }
 
 .header-main-nav {
-  font-family: "Roboto", sans-serif;
-  font-size: 13px;
+  font-family: "montserrat-bold", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .3rem;
-  color: rgba(255, 255, 255, 0.5);
+  color: var(--primary-text-color);
   margin: 0 0 0 4px;
   z-index: 2;
   position: static;
@@ -362,26 +337,26 @@ dd {
 }
 
 .header-main-nav a {
-  color: rgba(255, 255, 255, 0.5);
   position: relative;
+  color: var(--primary-text-color);
 }
 
 .header-main-nav a:hover,
 .header-main-nav a:focus,
 .header-main-nav a:active {
-  color: #ffffff;
+  color: var(--white);
 }
 
 .header-main-nav .current a {
-  color: #ffffff;
+  color: var(--white);
 }
 
 .header-social {
+  top: 0;
+  right: 40px;
   font-size: 2rem;
   margin: 0;
   position: absolute;
-  top: 0;
-  right: 40px;
 }
 
 .header-social li {
@@ -393,31 +368,28 @@ dd {
 }
 
 .header-social li a {
-  color: #ffffff;
+  color: var(--white);
 }
 
-/* ------------------------------------------------------------------- 
- * ## menu trigger
- * ------------------------------------------------------------------- */
 .header-menu-toggle {
   display: none;
   height: 42px;
   width: 42px;
   line-height: 42px;
-  font-family: "Lora", serif;
+  font-family: "montserrat-bold", sans-serif;
   font-size: 1.4rem;
   text-transform: uppercase;
   letter-spacing: .2rem;
-  color: rgba(255, 255, 255, 0.5);
+  color: var(--primary-text-color);
   transition: all .3s;
   position: absolute;
   right: 32px;
-  top: 18px;
+  top: 18px;    
 }
 
 .header-menu-toggle:hover,
 .header-menu-toggle:focus {
-  color: #ffffff;
+  color: var(--white);
 }
 
 .header-menu-toggle span {
@@ -425,7 +397,7 @@ dd {
   width: 24px;
   height: 2px;
   margin-top: -1px;
-  background-color: #ffffff;
+  background-color: var(--white);
   transition: all .5s;
   font: 0/0 a;
   text-shadow: none;
@@ -458,7 +430,7 @@ dd {
 
 .header-menu-toggle.is-clicked span {
   background-color: rgba(255, 255, 255, 0);
-  transition: all .1s;
+  transition: all .1s;  
 }
 
 .header-menu-toggle.is-clicked span::before,
@@ -478,107 +450,100 @@ dd {
   transform: rotate(225deg);
 }
 
-/* ------------------------------------------------------------------- 
- * responsive:
- * header
- * ------------------------------------------------------------------- */
 @media screen and (max-width:1200px) {
-  .header-main-nav {
-    font-size: 12px;
-  }
+.header-main-nav {
+  font-size: 12px;
+}
 
-  .header-main-nav li {
-    margin: 0 1.4rem;
-  }
+.header-main-nav li {
+  margin: 0 1.4rem;
+}
 
 }
 
 @media screen and (max-width:1000px) {
-  .s-header {
-    text-align: right;
-  }
+.header {
+  text-align: right;
+}
 
-  .header-nav-wrap {
-    margin-right: 36px;
-  }
+.header-nav-wrap {
+  margin-right: 36px;
+}
 
-  .header-nav-wrap .header-social {
-    display: none;
-  }
+.header-nav-wrap .header-social {
+  display: none;
+}
 
 }
 
 @media screen and (max-width:800px) {
-  .s-header {
-    background-color: transparent;
-    position: fixed;
-    top: 0;
-  }
+.header {
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+}
 
-  .header-logo img {
-    width: 128px;
-    height: 30px;
-  }
+.header-logo img {
+  width: 128px;
+  height: 30px;
+}
 
-  .header-nav-wrap {
-    display: none;
-    text-align: left;
-    height: auto;
-    width: 100%;
-    background-color: #050505;
-    padding: 120px 44px 64px;
-  }
+.header-nav-wrap {
+  display: none;
+  text-align: left;
+  height: auto;
+  width: 100%;
+  background-color: var(--black);
+  padding: 120px 44px 64px;
+}
 
-  .header-nav-wrap .header-main-nav {
-    display: block;
-    padding-left: 0;
-    height: auto;
-    margin: 0 0 4rem 0;
-    border-top: 1px solid rgba(255, 255, 255, 0.05);
-  }
+.header-nav-wrap .header-main-nav {
+  display: block;
+  padding-left: 0;
+  height: auto;
+  margin: 0 0 4rem 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
 
-  .header-nav-wrap .header-main-nav li {
-    display: block;
-    margin: 0;
-    padding: 0;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-  }
+.header-nav-wrap .header-main-nav li {
+  display: block;
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
 
-  .header-nav-wrap .header-main-nav li a {
-    padding: 18px 0;
-    line-height: 20px;
-  }
+.header-nav-wrap .header-main-nav li a {
+  padding: 18px 0;
+  line-height: 20px;
+}
 
-  .header-nav-wrap .header-social {
-    display: block;
-    position: static;
-  }
+.header-nav-wrap .header-social {
+  display: block;
+  position: static;
+}
 
-  .header-nav-wrap .header-social li {
-    font-size: 1.8rem;
-    margin-right: 1.6rem;
-  }
+.header-nav-wrap .header-social li {
+  font-size: 1.8rem;
+  margin-right: 1.6rem;
+}
 
-  .header-nav-wrap .header-social li a {
-    line-height: 36px;
-  }
+.header-nav-wrap .header-social li a {
+  line-height: 36px;
+}
 
-  .header-menu-toggle {
-    display: block;
-  }
+.header-menu-toggle {
+  display: block;
+}
 
 }
 
 @media screen and (max-width:600px) {
-  .header-logo {
-    left: 35px;
-  }
+.header-logo {
+  left: 35px;
+}
 
 }
 
-/* -------------------------------------------------------------------
- * make sure the menu is visible on larger screens
- * ------------------------------------------------------------------- */
 @media only screen and (min-width:801px) {
   .header-nav-wrap {
     display: block !important;
@@ -588,20 +553,20 @@ dd {
 
 
 /* ===================================================================
- * # intro 
- *
- * ------------------------------------------------------------------- */
-.s-intro {
+* # home 
+*
+* ------------------------------------------------------------------- */
+.home {
   width: 100%;
   height: 100vh;
   background: url(../img/3.png);
   background-size: cover;
   background-position: center;
   padding: 0 8%;
-  position: relative;;
+  position: relative;
 }
 
-.intro-content {
+.home-content {
   height: 100%;
   max-width: 1140px;
   padding-top: 20vh;
@@ -611,51 +576,50 @@ dd {
   position: relative;
 }
 
-.intro-pic {
+.home-pic {
   top: 20%;
   right: 0;
   bottom: 0;
   left: 50%;
 }
 
-.intro-pic::before {
+.home-pic::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: var(--black);
   opacity: .3;
 }
 
-.intro-text {
+.home-text {
   -webkit-transform: translate3d(0, -3.6rem, 0);
   transform: translate3d(0, -3.6rem, 0);
   position: static;
   z-index: 1;
 }
 
-.intro-text h3 {
-  font-family: "Roboto", sans-serif;
+.home-text h3 {
+  font-family: "montserrat-medium", sans-serif;
   font-size: 2.4rem;
   font-weight: 500;
   line-height: 1.333;
-  color: #fff;
+  color: var(--white);
   margin-top: 0;
 }
 
-.intro-text h1 {
+.home-text h1 {
   font-size: 10.8rem;
   text-transform: uppercase;
-  font-weight: 500;
   line-height: 1.179;
-  color: #ffffff;
+  color: var(--white);
   margin-top: 0;
 }
 
-.intro-scroll {
-  font-family: "Roboto", sans-serif;
+.home-scroll {
+  font-family: "montserrat-medium", sans-serif;
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 2;
@@ -667,167 +631,174 @@ dd {
   z-index: 1;
 }
 
-.intro-scroll a {
+.home-scroll a {
   display: inline-block;
-  color: #fff;
+  color: var(--white);
   position: relative;
   padding-right: 8.8rem;
 }
 
-.intro-scroll a::after {
+.home-scroll a::after {
   content: "";
   position: absolute;
   top: 50%;
   right: 0;
   height: 1px;
   width: 72px;
-  background-color: #9009B2;
+  background-color: var(--white);
 }
 
-/* ------------------------------------------------------------------- 
- * responsive:
- * intro
- * ------------------------------------------------------------------- */
 @media screen and (max-width:1400px) {
-  .intro-text h3 {
-    font-size: 2.2rem;
-  }
+.home-text h3 {
+  font-size: 2.2rem;
+}
 
-  .intro-text h1 {
-    font-size: 7.2rem;
-  }
+.home-text h1 {
+  font-size: 7.2rem;
+}
 
 }
 
 @media screen and (max-width:1200px) {
-  .intro-content {
-    max-width: 1000px;
-  }
+.home-content {
+  max-width: 1000px;
+}
 
-  .intro-text h3 {
-    font-size: 2rem;
-  }
+.home-text h3 {
+  font-size: 2rem;
+}
 
-  .intro-text h1 {
-    font-size: 7rem;
-  }
+.home-text h1 {
+  font-size: 7rem;
+}
 
 }
 
 @media screen and (max-width:1024px) {
-  .s-intro {
-    max-height: 800px;
-  }
+.s-home {
+  max-height: 800px;
+}
 
-  .intro-text h1 {
-    font-size: 6.2rem;
-  }
+.home-text h1 {
+  font-size: 6.2rem;
+}
 
 }
 
 @media screen and (max-width:900px) {
-  .intro-text h1 {
-    font-size: 6rem;
-  }
+.home-text h1 {
+  font-size: 6rem;
+}
 
-  .intro-text br {
-    display: none;
-  }
+.home-text br {
+  display: none;
+}
 
 }
 
 @media screen and (max-width:800px) {
-  .intro-content {
-    width: 88%;
-    padding-top: 8rem;
-  }
+.home-content {
+  width: 88%;
+  padding-top: 8rem;
+}
 
-  .intro-pic {
-    top: 12%;
-    left: 40%;
-  }
+.home-pic {
+  top: 12%;
+  left: 40%;
+}
 
-  .intro-pic::before {
-    opacity: .4;
-  }
+.home-pic::before {
+  opacity: .4;
+}
 
-  .intro-grid {
-    top: 20%;
-    opacity: .1;
-  }
+.home-grid {
+  top: 20%;
+  opacity: .1;
+}
 
-  .intro-text h3 {
-    font-size: 1.8rem;
-  }
+.home-text h3 {
+  font-size: 1.8rem;
+}
 
-  .intro-text h1 {
-    font-size: 5.6rem;
-  }
+.home-text h1 {
+  font-size: 5.6rem;
+}
 
 }
 
 @media screen and (max-width:700px) {
-  .intro-text h1 {
-    font-size: 5rem;
-  }
+.home-text h1 {
+  font-size: 5rem;
+}
 
-  .intro-pic {
-    left: 30%;
-  }
+.home-pic {
+  left: 30%;
+}
 
-  .intro-grid {
-    left: 15%;
-  }
+.home-grid {
+  left: 15%;
+}
 
 }
 
 @media screen and (max-width:600px) {
-  .s-intro {
-    max-height: none;
-  }
+.s-home {
+  max-height: none;
+}
 
-  .intro-content {
-    width: auto;
-  }
+.home-content {
+  width: auto;
+}
 
-  .intro-pic {
-    left: 20%;
-  }
+.home-pic {
+  left: 20%;
+}
 
-  .intro-grid {
-    left: 10%;
-  }
+.home-grid {
+  left: 10%;
+}
 
-  .intro-text {
-    -webkit-transform: translate3d(0, -4.8rem, 0);
-    transform: translate3d(0, -4.8rem, 0);
-  }
+.home-text {
+  -webkit-transform: translate3d(0, -4.8rem, 0);
+  transform: translate3d(0, -4.8rem, 0);
+}
 
-  .intro-text h1 {
-    font-size: 4.8rem;
-  }
+.home-text h1 {
+  font-size: 4.8rem;
+}
 
-  .intro-scroll {
-    font-size: 1.1rem;
-    left: 30px;
-  }
+.home-scroll {
+  font-size: 1.1rem;
+  left: 30px;
+}
 
 }
 
 @media screen and (max-width:400px) {
-  .s-intro {
-    min-height: 656px;
-  }
+.s-home {
+  min-height: 656px;
+}
 
-  .intro-text h1 {
-    font-size: 4.5rem;
-  }
+.home-text h1 {
+  font-size: 4.5rem;
+}
 
 }
 
 @media screen and (max-width:350px) {
-  .intro-text h1 {
-    font-size: 4.2rem;
-  }
+.home-text h1 {
+  font-size: 4.2rem;
+}
 
+}
+
+
+/* ===================================================================
+* # about
+*
+* ------------------------------------------------------------------- */
+.about {
+  padding-top: 19px;
+  padding-bottom: 19px;
+  background: var(--white);
 }
